15. Show server settings, and advanced player setttings, from 'Classic' skin and
    placed within an iframe.
16. When showing track information via now-playing, or a queue item, if 'Back'
    button is pressed, then change back to the relevant 'Playing' or 'Queue'
    tab.
17. Add 'Advanced search' - by embedding andvasned search page from Classic
    skin.

1.0.2
-----
1. Simplify volume change logic. Previously any changes that occurred within 1/2
   second of our change would be ignored.
2. Fix saving of pinned item list to new user defaults.
3. When listing album tracks, need to pass "artist_id:ID" regardless of the role
   filter being set or not. 2nd attempt at fix - ignore filters when checking
   to add.
4. Fix missing SVG icons when Material is set as default, and desktop/mobile
   URL is used. e.g. http://SERVER:9000/mobile
5. If there is no player on this server, but there are players on another
   server, then still show players menu - so that players may be moved to this
   server.
6. Tweak 'text' list item margins.

1.0.1
-----
 1. Allow items from within 'Radio', and browse modes containing genre_id to be
    pinned to home screen.
 2. For screens up to 500px wide, allow volume control to be full width, for
    others max width is 450px. This is to prevent scenario where there is a tiny
    (e.g. 5px) gap on the side.
 3. Sort players in 'Information' dialog.
 4. Use 'v-show' to control when to show mobile pages.
 5. Fix 'clickability' of home screen item checkbox list.
 6. When using 'More' menu item for track information, only clear browse history
    stack if it has 50 or more steps.
 7. Add Russian translation - thanks to sky418.
 8. Reduce list item height by 3px, so that it's the same as subtoolbar height.
    This allows initial lists in desktop layout to be balanced.
 9. Width must be 25% more than height to be classified as landscape.
10. Check landscape setting of now-playing 1 second after mounted.