@@ -66,7 +66,7 @@ var ACTIONS=[
     {cmd:"remove",       icon:"remove_circle_outline"},
     {cmd:"edit-fav",     icon:"edit"},
     {cmd:"add-fav",      svg: "add-favorite"},
-    {cmd:"delete",       icon:"delete"},
+    {cmd:"delete",       icon:"delete_outline"},
     {cmd:"addfav",       svg: "add-favorite"},
     {cmd:"removefav",    svg: "remove-favorite"},
     {cmd:"pin",          svg: "pin"},
@@ -79,7 +79,7 @@ var ACTIONS=[
     {cmd:"use-list",     icon:"grid_off"},
     {cmd:"albsort",      icon:"sort_by_alpha"},
     {cmd:"add-favdir",   icon:"create_new_folder"},
-    {cmd:"del-favdir",   icon:"delete"},
+    {cmd:"del-favdir",   icon:"delete_outline"},
     {cmd:"move-fav-parent", svg:"folder-up"},
     {cmd:"set-preset",   icon:"ballot"},
     {cmd:"move-preset",  icon:"import_export"},
