@@ -25,6 +25,7 @@
     tab.
 17. Add 'Advanced search' - by embedding andvasned search page from Classic
     skin.
+18. Add action to delete virtual libraries.
 
 1.0.2
 -----
